src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-12.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected an element (like Au) or an isotope (like [15N]) optionally
  │ followed by a number
  ╰─▶   × expected ']' to close isotope brackets
        help: you've probably forgotten to close an earlier '[' bracket
      
   ╭────
 1 │ [10H2O 
   ·     ▲
   ·     ╰── expected ']'
   ╰────

