src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-13.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected an element (like Au) or an isotope (like [15N]) optionally
  │ followed by a number
  ├─▶   × expected an element symbol
  │   
  ╰─▶   × expected an uppercase ASCII letter
      
   ╭────
 1 │ [10]H2O 
   ·    ▲
   ·    ╰── expected uppercase
   ╰────

