src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-15.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected '+' or '-', optionally followed by a number, then a particle
  │ (like p or e)
  ├─▶   × expected a particle symbol
  │   
  ╰─▶   × expected a lowercase ASCII letter
      
   ╭────
 1 │ [37Cl]5-2p+ 
   ·            ▲
   ·            ╰── expected lowercase
   ╰────

