src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-2.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected an element (like Au) or an isotope (like [15N]) optionally
  │ followed by a number
  ╰─▶   × the element "Yh" could not be found in the supplied chemical
      database
        help: double-check for typos, or add a new entry to the chemical
      database
      
   ╭────
 1 │ NH2[99Tc]YhO4 
   ·          ─┬
   ·           ╰── element not found
   ╰────

