src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-3.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected '+' or '-', optionally followed by a number, then a particle
  │ (like p or e)
  ╰─▶   × the particle "m" could not be found in the supplied chemical
      database
        help: double-check for typos, or add a new entry to the chemical
      database
      
   ╭────
 1 │ NH2[99Tc]O4-8m+2p 
   ·              ┬
   ·              ╰── particle not found
   ╰────

