src/polychem/snapshots/smithereens__polychem__composition_parser__tests__composition_errors-5.snap
---
source: src/polychem/composition_parser.rs
expression: out
---
  × expected an element (like Au) or an isotope (like [15N]) optionally
  │ followed by a number
  ╰─▶   × attempted 2 parse branches unsuccessfully
      
      Error:   × expected an element symbol
        ╰─▶   × expected an uppercase ASCII letter
      
      Error:   × expected '[' to open isotope brackets
      
   ╭────
 1 │ -H2O 
   · ▲
   · ╰── expected uppercase or '['
   ╰────

